build.gradle.kts:  enable native access for Java versions >= 17