@@ -89,6 +89,7 @@ val os = DefaultNativePlatform.getCurrentOperatingSystem()
 val includeLinux = os.isLinux()
 val includeMacOsX = os.isMacOsX()
 val includeWindows = os.isWindows()
+val enableNativeAccess = JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_17)
 
 tasks.withType<JavaExec>().all { // JVM runtime options:
     if (os.isMacOsX()) {
@@ -96,6 +97,9 @@ tasks.withType<JavaExec>().all { // JVM runtime options:
     }
     classpath = sourceSets.main.get().getRuntimeClasspath()
     enableAssertions = assertions
+    if (enableNativeAccess) {
+        jvmArgs '--enable-native-access=ALL-UNNAMED' // suppress System::load() warning
+    }
     jvmArgs("-XX:+UseG1GC", "-XX:MaxGCPauseMillis=10")
 }
 
